<resources>
    <string name="app_name">Trafood</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Vaforite</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_home_view_pager__fragment">HomeViewPager_Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="like">Likes</string>
    <string name="title_activity_maps">Map</string>

    <string name="facebook_app_id">996826973826196</string>
    <string name="fb_login_protocol_scheme">fb996826973826196</string>


    <!-- Info rumah makan -->.
    <string name="notelp">No Telepon</string>
    <string name="namarm">Nama Kedai</string>
    <string name="url">url</string>
    <string name="waktu_buka">Waktu Buka</string>
    <string name="sunday">Ahad</string>
    <string name="monday">Senin</string>
    <string name="teusday">Selasa</string>
    <string name="wednesday">Rabu</string>
    <string name="thursday">Kamis</string>
    <string name="friday">Jumat</string>
    <string name="saturday">Sabtu</string>
    <string name="dash"> - </string>
    <string name="fasilty">Fasilitas</string>
    <string name="mosque">Ruang Sholat</string>
    <string name="parking">Tempat Parkir</string>
    <string name="toilet">Toilet</string>
    <string name="wifi">Wifi</string>
    <string name="music">Pertunjukan Musik</string>
    <string name="smoking">Ruang Merokok</string>
    <string name="contact">Contact</string>
    <string name="catgory">Kategori</string>
    <string name="ulasn">Ulasan</string>
    <string name="menandai">Menandai</string>
    <string name="description">Deskripsi</string>
    <string name="alamat">Alamat</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kota">Kota</string>
    <string name="segeradaftar">Segera Daftarkan Kedai anda di trafood sekarang</string>

    <string-array name="spinner_cart">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="spinner_menu_lain">
        <item>Bantuan</item>
        <item>Sebagai User</item>
        <item>Sebagai Penjual</item>
        <item>Penulisan Artikel</item>
    </string-array>

    <!-- info menu -->
    <string name="rekomendasi">Rekomendasi</string>
    <string name="kunjungi">Kunjungi Kedai</string>
    <string name="lokasi">Lokasi</string>
    <string name="kategori">Kategori Kedai</string>
    <string name="tag">Tags </string>
    <string name="dilihat">Dilihat</string>
    <string name="namamenu">Nama Menu</string>
    <string name="deksripsimenu">Deskripsi Menu</string>
    <string name="tambah">tambah</string>
    <string name="pesan">Pesan</string>


    <!-- User -->
    <string name="point">Trapoint</string>
    <string name="kunjungan">Visit</string>
    <string name="review">Review</string>
    <string name="article">Article</string>
    <string name="total">Total</string>
    <string name="artikel">Artikel</string>
    <string name="tambahmenu">Tambah Menu</string>
    <string name="lihatkedai">Lihat Kedai</string>
    <string name="ringkasankedai">Ringkasan Kedai</string>
    <string name="pengaturan">Setting</string>
    <string name="hubungi_trf">Hubungi Trafood</string>
    <string name="othermenus">Menu Lain</string>
    <string name="spasi">  </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="tidakpunyaakun">Tidak punya akun?</string>
    <string name="signin">Sign in</string>
    <string name="signout">Sign Out</string>
    <string name="alreadyhaveaccount">Already Have Accoun?t</string>
    <string name="segera">Segara login di aplikasi Trafood agar kamu dapat mengatur akun mu,
        dan berbagi penegtahuan tenantang makanana</string>
    <string name="settingakun">Edit Profil</string>
    <string name="gantipasswor">Ganti Password</string>
    <string name="settingkedai">Edit Kedai</string>
    <string name="nama">Nama</string>
    <string name="dob">Tanggal lahir</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="tentang">Tentang</string>
    <string name="loginfb">Login dengan Facebook</string>
    <string name="lupasadi">Lupa Sandi?</string>
    <string name="pulihkan">Pulihkan</string>
    <string name="atau">Atau</string>
    <string name="buatakun">Buat akun</string>

    <!-- Filter -->
    <string name="lokasi_filter">Lokasi</string>
    <string name="kaku">Kata kunci</string>
    <string name="harga">Harga</string>
    <string name="sort">Urut Berdasarkan</string>
    <string name="jarak">Jarak</string>
    <string name="penilaian">Penilaian</string>
    <string name="kategori_filter">Kategori</string>
    <string name="fasilitas">Fasilitas</string>

    <!-- navigation -->
    <string name="sharefb">Bagikan ke facebook</string>
    <string name="shareig">Bagikan ke instagram</string>
    <string name="sharetwitter">Bagikan ke twitter</string>
    <string name="report">Laporkan..</string>
    <string name="copylink">Salin Link</string>

    <!-- harga -->
    <string-array name="mulai_harga">
        <item>Mulai harga</item>
        <item>0</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>30000</item>
        <item>40000</item>
        <item>50000</item>
        <item>60000</item>
        <item>70000</item>
        <item>80000</item>
        <item>90000</item>
        <item>100000</item>
        <item>150000</item>
    </string-array>
    <string-array name="sampai_harga">
        <item>Sampai harga</item>
        <item>5000</item>
        <item>10000</item>
        <item>15000</item>
        <item>20000</item>
        <item>30000</item>
        <item>40000</item>
        <item>50000</item>
        <item>60000</item>
        <item>70000</item>
        <item>80000</item>
        <item>90000</item>
        <item>100000</item>
        <item>150000</item>
        <item>200000</item>
    </string-array>
    <string-array name="jeniskelamin">
        <item>Pria</item>
        <item>Wanita</item>
    </string-array>
    <string-array name="buka">
        <item>06.00</item>
        <item>06.30</item>
        <item>07.00</item>
        <item>07.30</item>
        <item>08.00</item>
        <item>08.30</item>
        <item>09.00</item>
        <item>09.30</item>
        <item>10.00</item>
        <item>10.30</item>
        <item>11.00</item>
        <item>11.30</item>
        <item>12.00</item>
        <item>12.30</item>
        <item>13.00</item>
        <item>13.30</item>
        <item>14.00</item>
        <item>14.30</item>
        <item>15.00</item>
        <item>15.30</item>
        <item>16.00</item>
        <item>16.30</item>
        <item>17.00</item>
        <item>17.30</item>
        <item>18.00</item>
        <item>18.30</item>
        <item>19.00</item>
        <item>19.30</item>
        <item>20.00</item>
        <item>20.30</item>
        <item>21.00</item>
        <item>22.00</item>
        <item>23.00</item>
        <item>24.00</item>
    </string-array>

    <string-array name="tutup">
        <item>18.00</item>
        <item>18.30</item>
        <item>19.00</item>
        <item>19.30</item>
        <item>20.00</item>
        <item>20.30</item>
        <item>21.00</item>
        <item>22.00</item>
        <item>23.00</item>
        <item>24.00</item>
        <item>01.00</item>
        <item>02.00</item>
        <item>03.00</item>
        <item>04.00</item>
        <item>05.00</item>
    </string-array>

    <string-array name="kategori">
        <item>Kafe</item>
        <item>Resto</item>
        <item>Food Court</item>
        <item>Kedai</item>
        <item>Warung</item>
        <item>Kaki Lima</item>

    </string-array>

</resources>
